Fix spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ h2 {
   font-size:40px;
 }
 
+.container {
+  width: 909px;
+}
+
 .add-button {
   font-weight: bold;
   color: #4f0015;
@@ -71,7 +75,7 @@ h2 {
 }
 
 #relationships {
-  width: 52%;
+  width: 620px;
   margin-left: 234px;
   position: absolute;
   z-index:10;
@@ -79,7 +83,7 @@ h2 {
 }
 
 #relationshipsVert {
-  width: 60%;
+  width: 909px;
   margin-left: 87px;
   position: absolute;
   z-index:10;
